# VLXI-Cookiecutter-Julia

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  NEWS.md  NOTICE  Project.toml  README-Template-Usage.md  README.md  README.md.template  cookiecutter.json  pyproject.toml
config/: env.template
docs/: Julia-Local-Registry-Guide.md  Julia-Packaging-Guide.md  Poetry-Quick-Reference.md  VLXI-Julia-Code-Organization-and-Style-Conventions.md  Velexi-Julia-Code-Structure-and-Style-Conventions.md
extras/: dot-envrc  envrc.template
hooks/: post_gen_project.sh  pre_gen_project.sh
spikes/: coverage-ArgMacros.jl
src/: Example.jl  Example.jl.template  ExampleMethods.jl  ExampleModule.jl  ExampleType.jl  MethodTemplate.jl  TypeTemplate.jl
src-external/: jlcodestyle.jl
template-docs/: README-Julia-Template.md  RELEASE-NOTES-Julia-Template.md
templates/: LICENSE  Makefile  README.md  envrc
test/: Example_tests.jl  Example_tests.jl.template  Project.toml  runtests.jl
{{cookiecutter.__package_name}}/: Makefile  NEWS.md  NOTICE  README-template.md  dot-github-workflows-CI.yml  pyproject.toml  test-runtests.jl
{{cookiecutter.__package_name}}/extras/references/: Julia-Local-Registry-Guide.md  Julia-Packaging-Guide.md
{{cookiecutter.__package_name}}/extras/templates/docs/: make.jl
{{cookiecutter.__project_name}}/: .gitignore  NEWS.md  NOTICE  README-template.md  dot-github-workflows-CI.yml  pyproject.toml  test-runtests.jl
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  NEWS.md  README-template.md  dot-github-workflows-CI.yml  pyproject.toml  test-runtests.jl
{{cookiecutter.project_name}}/extras/: dot-envrc
{{cookiecutter.project_name}}/extras/docs/: Julia-Packaging-Guide.md
{{cookiecutter.project_name}}/extras/references/: Julia-Packaging-Guide.md
(+21 files in other folders)
