[tool.poetry]
name = "Velexi Julia Package Cookiecutter"
version = "0.5.0"
description = "Template for Julia packages"
license = "Apache-2.0"
authors = ["Kevin Chu <kevin@velexi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2.1.1"
pre-commit = "^3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
